# pankan-look

./: .gitignore  README.md  SPEC.md  pankan-look.README.md
panpankan/: package.json  tailwind.config.js  tsconfig.json  vite.config.ts
panpankan/frontend/: index.html
panpankan/frontend/src/: App.tsx  index.css  main.tsx
panpankan/frontend/src/components/browser/: Breadcrumb.tsx  FileBrowser.tsx  FileGrid.tsx  FileItem.tsx  FileList.tsx
panpankan/frontend/src/components/layout/: AppShell.tsx
panpankan/frontend/src/components/media/: MediaCard.tsx  MediaGrid.tsx
panpankan/frontend/src/components/player/: PlayerControls.tsx  PlaylistSidebar.tsx
panpankan/frontend/src/components/providers/: AddProviderModal.tsx  ProviderSelector.tsx
panpankan/frontend/src/lib/: tauri.ts
panpankan/frontend/src/pages/: BrowserPage.tsx  HomePage.tsx  LibraryPage.tsx  MediaDetailPage.tsx  NsfwDetailPage.tsx  NsfwPage.tsx  PlayerEmbedPage.tsx  PlayerPage.tsx  SettingsPage.tsx
panpankan/frontend/src/stores/: index.ts
panpankan/src-tauri/: Cargo.toml  tauri.conf.json
panpankan/src-tauri/capabilities/: default.json
panpankan/src-tauri/src/: lib.rs  local_server.rs  main.rs  models.rs  utils.rs
panpankan/src-tauri/src/db/: mod.rs
panpankan/src-tauri/src/media/: probe.rs
panpankan/src-tauri/src/player/: mod.rs  mpv_embed.rs
panpankan/src-tauri/src/providers/: guangya.rs  local.rs  mod.rs  openlist.rs  webdav.rs
panpankan/src-tauri/src/safety/: mod.rs
panpankan/src-tauri/src/scanner/: mod.rs
panpankan/src-tauri/src/scraper/: mod.rs
(+5 files in other folders)
